--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -267,9 +267,37 @@ Thermal Network Design:
 
 
 Life Cycle Analysis:
+  - name: final-energy
+    label: Energy by Carrier
+    short_description: Calculate final energy consumption by carrier type
+    description: |
+      This feature calculates final energy consumption for each building by energy carrier.
+
+      **Final energy** is the energy delivered to the building meter (electricity, natural gas, district heating/cooling, etc.),
+      accounting for supply system conversion efficiencies.
+
+      **Process**:
+      - Takes end-use energy demand from the Energy Demand Forecasting Feature (E_sys, Qhs_sys, Qcs_sys, Qww_sys)
+      - Applies supply system configurations from Building Properties/Supply or What-if Settings
+      - Calculates conversion losses based on system efficiencies (boilers, heat pumps, chillers, etc.)
+      - Outputs energy consumption by energy carrier: GRID (electricity), NG (natural gas), DH (district heating), DC (district cooling), WOOD, OIL, COAL, SOLAR (thermal), PV (electricity), etc.
+
+      **Outputs**: Hourly and annual energy consumption for each building and total scenario consumption by energy carrier.
+
+    interfaces: [ cli, dashboard ]
+    module: cea.analysis.final_energy.main
+    parameters: [ 'general:scenario',
+#                  'final-energy'
+    ]
+    input-files:
+      - [ get_total_demand ]
+      - [ get_building_supply ]
+      - [ get_demand_results_file, building_name ]
+      - [ get_weather_file ]
+      - [ get_db4_components_conversion_folder ]
 
   - name: emissions
-    label: Emissions
+    label: GHG Emissions
     short_description: Calculate embodied and operational GHG emissions from final energy
     description: |
       This Feature calculates lifecycle GHG emissions for each building.
@@ -322,7 +350,7 @@ Life Cycle Analysis:
 #      - [get_building_supply]
 
   - name: system-costs
-    label: Energy Supply System Costs
+    label: Costs
     short_description: Calculate detailed costs for base case supply systems
     description: |
       This feature calculates costs for baseline supply systems using detailed
@@ -346,7 +374,7 @@ Life Cycle Analysis:
       - [get_zone_geometry]
 
   - name: anthropogenic-heat
-    label: Anthropogenic Heat Rejection
+    label: Heat Rejection
     short_description: Calculate heat rejection to the environment from energy systems
     description: |
       This feature calculates anthropogenic heat emissions (heat rejection) from
