--- a/cea/default.config
+++ b/cea/default.config
@@ -526,11 +526,11 @@ wall-thickness-3-m.type = RealParameter
 wall-thickness-3-m.nullable = true
 wall-thickness-3-m.help = Thickness [m] of third material layer for walls.
 wall-thickness-3-m.category = New Wall Properties
-wall-Lifetime =
-wall-Lifetime.type = IntegerParameter
-wall-Lifetime.nullable = true
-wall-Lifetime.help = New lifetime [years] to apply to the selected archetypes.
-wall-Lifetime.category = New Wall Properties
+wall-lifetime =
+wall-lifetime.type = IntegerParameter
+wall-lifetime.nullable = true
+wall-lifetime.help = New lifetime [years] to apply to the selected archetypes.
+wall-lifetime.category = New Wall Properties
 
 roof-material-name-1 =
 roof-material-name-1.type = ColumnChoiceParameter
@@ -568,11 +568,11 @@ roof-thickness-3-m.type = RealParameter
 roof-thickness-3-m.nullable = true
 roof-thickness-3-m.help = Thickness [m] of third material layer for roofs.
 roof-thickness-3-m.category = New Roof Properties
-roof-Lifetime =
-roof-Lifetime.type = IntegerParameter
-roof-Lifetime.nullable = true
-roof-Lifetime.help = New lifetime [years] to apply to the selected archetypes.
-roof-Lifetime.category = New Roof Properties
+roof-lifetime =
+roof-lifetime.type = IntegerParameter
+roof-lifetime.nullable = true
+roof-lifetime.help = New lifetime [years] to apply to the selected archetypes.
+roof-lifetime.category = New Roof Properties
 
 floor-material-name-1 =
 floor-material-name-1.type = ColumnChoiceParameter
@@ -610,11 +610,11 @@ floor-thickness-3-m.type = RealParameter
 floor-thickness-3-m.nullable = true
 floor-thickness-3-m.help = Thickness [m] of third material layer for floors.
 floor-thickness-3-m.category = New Floor Properties
-floor-Lifetime =
-floor-Lifetime.type = IntegerParameter
-floor-Lifetime.nullable = true
-floor-Lifetime.help = New lifetime [years] to apply to the selected archetypes.
-floor-Lifetime.category = New Floor Properties
+floor-lifetime =
+floor-lifetime.type = IntegerParameter
+floor-lifetime.nullable = true
+floor-lifetime.help = New lifetime [years] to apply to the selected archetypes.
+floor-lifetime.category = New Floor Properties
 
 base-material-name-1 =
 base-material-name-1.type = ColumnChoiceParameter
@@ -652,11 +652,11 @@ base-thickness-3-m.type = RealParameter
 base-thickness-3-m.nullable = true
 base-thickness-3-m.help = Thickness [m] of third material layer for bases/floors.
 base-thickness-3-m.category = New Base Properties
-base-Lifetime =
-base-Lifetime.type = IntegerParameter
-base-Lifetime.nullable = true
-base-Lifetime.help = New lifetime [years] to apply to the selected archetypes.
-base-Lifetime.category = New Base Properties
+base-lifetime =
+base-lifetime.type = IntegerParameter
+base-lifetime.nullable = true
+base-lifetime.help = New lifetime [years] to apply to the selected archetypes.
+base-lifetime.category = New Base Properties
 
 type-win =
 type-win.type = ColumnChoiceParameter
