change description typing error

--- a/cea/default.config
+++ b/cea/default.config
@@ -769,7 +769,7 @@ existing-timeline-name.type = SubfolderChoiceParameter
 existing-timeline-name.locator = get_district_timeline_container_folder
 existing-timeline-name.kwargs = 
 existing-timeline-name.help = Name of an existing timeline to load events from. 
-    If you want to create a new timeline, first create it using the "Create Event in Timeline" tool.
+    If you want to create a new timeline, first create it using the "Create New Timeline" tool.
 existing-timeline-name.nullable = false
 
 simulation-mode = pending
