change workflow description in scripts.yml

--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -368,7 +368,7 @@ Scenario Evolution Planning:
       
       It runs:
       - Radiation
-      - Occupancy-helper
+      - Occupancy
       - Demand
       - Photovoltaic
       - Emissions
