--- a/cea/default.config
+++ b/cea/default.config
@@ -373,6 +373,79 @@ retain-technical-results.type = BooleanParameter
 retain-technical-results.help = True to retain detailed technical results files. Larger disc space usage.
 retain-technical-results.category = Advanced
 
+[final-energy]
+what-if-name =
+what-if-name.type = whatifNameParameter
+what-if-name.nullable = true
+what-if-name.help = Name of what-if analysis (sub)scenario.
+
+overwrite-supply-settings = true
+overwrite-supply-settings.type = BooleanParameter
+overwrite-supply-settings.help = True to use 'connected-buildings' parameter instead of buildings defined in Building Properties/Supply.
+
+
+network-name =
+network-name.type = NetworkLayoutChoiceParameter
+network-name.nullable = true
+network-name.default-to-none = true
+network-name.help = Select an existing network layout to calculate the delivered energy.
+
+network-type = DH, DC
+network-type.type = MultiChoiceParameter
+network-type.choices = DH, DC
+network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
+
+supply-type-cs =
+supply-type-cs.type = DistrictSupplyTypeParameter
+supply-type-cs.supply-category = SUPPLY_COOLING
+supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+
+supply-type-hs =
+supply-type-hs.type = DistrictSupplyTypeParameter
+supply-type-hs.supply-category = SUPPLY_HEATING
+supply-type-hs.help = Heating supply system type(s). Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+
+supply-type-dhw =
+supply-type-dhw.type = DistrictSupplyTypeParameter
+supply-type-dhw.supply-category = SUPPLY_HOTWATER
+supply-type-dhw.help = Domestic hot water supply system type(s). Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply.
+
+booster-type =
+booster-type.type = DistrictSupplyTypeParameter
+booster-type.supply-category = SUPPLY_HOTWATER_BOOSTER
+booster-type.help = Domestic hot water booster system type. Select one assembly for the booster system.
+
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = Buildings to include in solar technology installation.
+buildings.category = Solar Technology Configuration
+
+panels-on-roof =
+panels-on-roof.type = SolarPanelChoiceParameter
+panels-on-roof.help = Type(s) of solar panels to consider for rooftop installation cost calculations.
+panels-on-roof.category = Solar Technology Configuration
+
+panels-on-wall-north =
+panels-on-wall-north.type = SolarPanelChoiceParameter
+panels-on-wall-north.help = Type(s) of solar panels to consider for north-facing facade installation cost calculations.
+panels-on-wall-north.category = Solar Technology Configuration
+
+panels-on-wall-south =
+panels-on-wall-south.type = SolarPanelChoiceParameter
+panels-on-wall-south.help = Type(s) of solar panels to consider for south-facing facade installation cost calculations.
+panels-on-wall-south.category = Solar Technology Configuration
+
+panels-on-wall-east =
+panels-on-wall-east.type = SolarPanelChoiceParameter
+panels-on-wall-east.help = Type(s) of solar panels to consider for east-facing facade installation cost calculations.
+panels-on-wall-east.category = Solar Technology Configuration
+
+panels-on-wall-west =
+panels-on-wall-west.type = SolarPanelChoiceParameter
+panels-on-wall-west.help = Type(s) of solar panels to consider for west-facing facade installation cost calculations.
+panels-on-wall-west.category = Solar Technology Configuration
+
+
 [system-costs]
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
@@ -422,36 +495,8 @@ heat-rejection-components.choices = COOLING_TOWERS
 heat-rejection-components.help = Technologies used for heat rejection. Used both as fallback when supply assemblies don't specify heat rejection components AND to determine component activation order when SUPPLY assemblies are used.
 heat-rejection-components.category = Energy Supply Configuration Fallbacks
 
-[system-costs-solar]
-buildings =
-buildings.type = BuildingsParameter
-buildings.help = Buildings to include in solar technology installation.
-buildings.category = Solar Technology Configuration
 
-panels-on-roof =
-panels-on-roof.type = SolarPanelChoiceParameter
-panels-on-roof.help = Type(s) of solar panels to consider for rooftop installation cost calculations.
-panels-on-roof.category = Solar Technology Configuration
 
-panels-on-wall-north =
-panels-on-wall-north.type = SolarPanelChoiceParameter
-panels-on-wall-north.help = Type(s) of solar panels to consider for north-facing facade installation cost calculations.
-panels-on-wall-north.category = Solar Technology Configuration
-
-panels-on-wall-south =
-panels-on-wall-south.type = SolarPanelChoiceParameter
-panels-on-wall-south.help = Type(s) of solar panels to consider for south-facing facade installation cost calculations.
-panels-on-wall-south.category = Solar Technology Configuration
-
-panels-on-wall-east =
-panels-on-wall-east.type = SolarPanelChoiceParameter
-panels-on-wall-east.help = Type(s) of solar panels to consider for east-facing facade installation cost calculations.
-panels-on-wall-east.category = Solar Technology Configuration
-
-panels-on-wall-west =
-panels-on-wall-west.type = SolarPanelChoiceParameter
-panels-on-wall-west.help = Type(s) of solar panels to consider for west-facing facade installation cost calculations.
-panels-on-wall-west.category = Solar Technology Configuration
 
 [emissions]
 year-end =
