--- a/cea/default.config
+++ b/cea/default.config
@@ -367,22 +367,20 @@ overheating-warning.type = BooleanParameter
 overheating-warning.help = Set to False to bypass overheating warning.
 overheating-warning.category = Advanced
 
-
 retain-technical-results = false
 retain-technical-results.type = BooleanParameter
 retain-technical-results.help = True to retain detailed technical results files. Larger disc space usage.
 retain-technical-results.category = Advanced
 
 [final-energy]
-what-if-name =
-what-if-name.type = whatifNameParameter
-what-if-name.nullable = true
-what-if-name.help = Name of what-if analysis (sub)scenario.
-
 overwrite-supply-settings = true
 overwrite-supply-settings.type = BooleanParameter
-overwrite-supply-settings.help = True to use 'connected-buildings' parameter instead of buildings defined in Building Properties/Supply.
+overwrite-supply-settings.help = False to use supply systems from Building Properties/Supply and validates consistency with network connectivity. True to use what-if (sub)scenario analysis of various network connections.
 
+what-if-name =
+what-if-name.type = NetworkLayoutNameParameter
+what-if-name.nullable = true
+what-if-name.help = Name of what-if analysis (sub)scenario. Auto set to "baseline" when overwrite-supply-settings is False.
 
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
