--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -287,7 +287,7 @@ Life Cycle Analysis:
     interfaces: [ cli, dashboard ]
     module: cea.analysis.final_energy.main
     parameters: [ 'general:scenario',
-#                  'final-energy'
+                  'final-energy'
     ]
     input-files:
       - [ get_total_demand ]
