--- a/cea/default.config
+++ b/cea/default.config
@@ -386,32 +386,35 @@ network-name =
 network-name.type = NetworkLayoutChoiceParameter
 network-name.nullable = true
 network-name.default-to-none = true
-network-name.help = Select an existing network layout to calculate the delivered energy.
-
-network-type = DH, DC
-network-type.type = MultiChoiceParameter
-network-type.choices = DH, DC
-network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
+network-name.help = Select an existing network layout to calculate the delivered energy. DH and DC services will be considered if they exist for the selected layout. Select (none) to assess all buildings as standalone systems. Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
 
 supply-type-cs =
 supply-type-cs.type = DistrictSupplyTypeParameter
 supply-type-cs.supply-category = SUPPLY_COOLING
-supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity.
+supply-type-cs.nullable = true
+supply-type-cs.category = Supply System Configuration
 
 supply-type-hs =
 supply-type-hs.type = DistrictSupplyTypeParameter
 supply-type-hs.supply-category = SUPPLY_HEATING
-supply-type-hs.help = Heating supply system type(s). Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+supply-type-hs.help = Space heating supply system type(s). Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity.
+supply-type-hs.nullable = true
+supply-type-hs.category = Supply System Configuration
 
 supply-type-dhw =
 supply-type-dhw.type = DistrictSupplyTypeParameter
 supply-type-dhw.supply-category = SUPPLY_HOTWATER
-supply-type-dhw.help = Domestic hot water supply system type(s). Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply.
+supply-type-dhw.help = Domestic hot water supply system type(s). Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity.
+supply-type-dhw.nullable = true
+supply-type-dhw.category = Supply System Configuration
 
-booster-type =
-booster-type.type = DistrictSupplyTypeParameter
-booster-type.supply-category = SUPPLY_HOTWATER_BOOSTER
-booster-type.help = Domestic hot water booster system type. Select one assembly for the booster system.
+dhw-booster-type =
+dhw-booster-type.type = DistrictSupplyTypeParameter
+dhw-booster-type.supply-category = SUPPLY_HOTWATER_BOOSTER
+dhw-booster-type.help = Domestic hot water booster system type. Select one building-scale assembly for the booster system. Only relevant when a network with a (low-temp) heating system is selected above.
+dhw-booster-type.nullable = true
+dhw-booster-type.category = Supply System Configuration
 
 buildings =
 buildings.type = BuildingsParameter
