update config file

--- a/cea/default.config
+++ b/cea/default.config
@@ -412,6 +412,7 @@ supply-type-dhw.category = Supply System Configuration
 dhw-booster-type =
 dhw-booster-type.type = DistrictSupplyTypeParameter
 dhw-booster-type.supply-category = SUPPLY_HOTWATER_BOOSTER
+dhw-booster-type.scale = BUILDING
 dhw-booster-type.help = Domestic hot water booster system type. Select one building-scale assembly for the booster system. Only relevant when a network with a (low-temp) heating system is selected above.
 dhw-booster-type.nullable = true
 dhw-booster-type.category = Supply System Configuration
