front end working with booster parameters

--- a/cea/default.config
+++ b/cea/default.config
@@ -409,11 +409,19 @@ supply-type-dhw.help = Domestic hot water supply system type(s). Select up to 2 
 supply-type-dhw.nullable = true
 supply-type-dhw.category = Supply System Configuration
 
+hs-booster-type =
+hs-booster-type.type = DistrictSupplyTypeParameter
+hs-booster-type.supply-category = SUPPLY_HEATING
+hs-booster-type.scale = BUILDING
+hs-booster-type.help = Space heating booster system type. Select one building-scale assembly for the booster system. Only relevant when a network with a heating system is selected above.
+hs-booster-type.nullable = true
+hs-booster-type.category = Supply System Configuration
+
 dhw-booster-type =
 dhw-booster-type.type = DistrictSupplyTypeParameter
-dhw-booster-type.supply-category = SUPPLY_HOTWATER_BOOSTER
+dhw-booster-type.supply-category = SUPPLY_HOTWATER
 dhw-booster-type.scale = BUILDING
-dhw-booster-type.help = Domestic hot water booster system type. Select one building-scale assembly for the booster system. Only relevant when a network with a (low-temp) heating system is selected above.
+dhw-booster-type.help = Domestic hot water booster system type. Select one building-scale assembly for the booster system. Only relevant when a network with a heating system is selected above.
 dhw-booster-type.nullable = true
 dhw-booster-type.category = Supply System Configuration
 
@@ -462,17 +470,17 @@ network-type.help = Type(s) of district network to calculate costs for: "DH" (di
 supply-type-cs =
 supply-type-cs.type = DistrictSupplyTypeParameter
 supply-type-cs.supply-category = SUPPLY_COOLING
-supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply.
 
 supply-type-hs =
 supply-type-hs.type = DistrictSupplyTypeParameter
 supply-type-hs.supply-category = SUPPLY_HEATING
-supply-type-hs.help = Heating supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+supply-type-hs.help = Heating supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply.
 
 supply-type-dhw =
 supply-type-dhw.type = DistrictSupplyTypeParameter
 supply-type-dhw.supply-category = SUPPLY_HOTWATER
-supply-type-dhw.help = Domestic hot water supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply. Select "Custom (use component settings below)" to use the component parameters instead of a predefined assembly.
+supply-type-dhw.help = Domestic hot water supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply.
 
 available-feedstocks = GRID, NATURALGAS, OIL
 available-feedstocks.type = MultiChoiceFeedstockParameter
