--- a/cea/default.config
+++ b/cea/default.config
@@ -373,7 +373,7 @@ retain-technical-results.help = True to retain detailed technical results files.
 retain-technical-results.category = Advanced
 
 [final-energy]
-overwrite-supply-settings = true
+overwrite-supply-settings = false
 overwrite-supply-settings.type = BooleanParameter
 overwrite-supply-settings.help = False to use supply systems from Building Properties/Supply and validates consistency with network connectivity. True to use what-if (sub)scenario analysis of various network connections.
 
@@ -386,7 +386,7 @@ network-name =
 network-name.type = NetworkLayoutChoiceParameter
 network-name.nullable = true
 network-name.default-to-none = true
-network-name.help = Select an existing network layout to calculate the delivered energy. DH and DC services will be considered if they exist for the selected layout. Select (none) to assess all buildings as standalone systems. Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
+network-name.help = Select an existing network layout to calculate the delivered energy. When overwrite-supply-settings is set to true, network will default to and be validated against baseline. When overwrite-supply-settings is set to false, DH and DC services will be considered if they exist for the selected layout. Select (none) to assess all buildings as standalone systems. Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
 
 supply-type-cs =
 supply-type-cs.type = DistrictSupplyTypeParameter
@@ -455,86 +455,17 @@ panels-on-wall-west.type = SolarPanelChoiceParameter
 panels-on-wall-west.help = Type(s) of solar panels to consider for west-facing facade installation cost calculations.
 panels-on-wall-west.category = Solar Technology Configuration
 
-
-[system-costs]
-network-name =
-network-name.type = NetworkLayoutChoiceParameter
-network-name.nullable = true
-network-name.help = Select an existing network layout for the cost calculation, or select "(none)" to assess all buildings as standalone systems (ignoring district-scale supply settings). Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
-
-network-type = DH, DC
-network-type.type = MultiChoiceParameter
-network-type.choices = DH, DC
-network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
-
-supply-type-cs =
-supply-type-cs.type = DistrictSupplyTypeParameter
-supply-type-cs.supply-category = SUPPLY_COOLING
-supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply.
-
-supply-type-hs =
-supply-type-hs.type = DistrictSupplyTypeParameter
-supply-type-hs.supply-category = SUPPLY_HEATING
-supply-type-hs.help = Heating supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply.
-
-supply-type-dhw =
-supply-type-dhw.type = DistrictSupplyTypeParameter
-supply-type-dhw.supply-category = SUPPLY_HOTWATER
-supply-type-dhw.help = Domestic hot water supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity. If nothing is selected, CEA will fall back to the supply systems specified in Building Properties/Supply.
-
-available-feedstocks = GRID, NATURALGAS, OIL
-available-feedstocks.type = MultiChoiceFeedstockParameter
-available-feedstocks.help = Feedstock options to consider for components of energy supply configuration fallback below. Order indicates priority for deployment.
-available-feedstocks.category = Energy Supply Configuration Fallbacks
-
-cooling-components = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
-cooling-components.type = MultiChoiceParameter
-cooling-components.choices = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
-cooling-components.help = Technologies to consider for district cooling plants. Order indicates priority for deployment. Used both as fallback when supply-type-cs is not set AND to determine component activation order when SUPPLY assemblies are used.
-cooling-components.category = Energy Supply Configuration Fallbacks
-
-heating-components = BOILERS, HEAT_PUMPS
-heating-components.type = MultiChoiceParameter
-heating-components.choices = BOILERS, HEAT_PUMPS, COGENERATION_PLANTS
-heating-components.help = Technologies to consider for district heating plants. Order indicates priority for deployment. Used both as fallback when supply-type-hs is not set AND to determine component activation order when SUPPLY assemblies are used.
-heating-components.category = Energy Supply Configuration Fallbacks
-
-heat-rejection-components = COOLING_TOWERS
-heat-rejection-components.type = MultiChoiceParameter
-heat-rejection-components.choices = COOLING_TOWERS
-heat-rejection-components.help = Technologies used for heat rejection. Used both as fallback when supply assemblies don't specify heat rejection components AND to determine component activation order when SUPPLY assemblies are used.
-heat-rejection-components.category = Energy Supply Configuration Fallbacks
-
-
-
+[what-ifs]
+what-if-name =
+% what-if-name.type = WhatIfMultiChoiceParameter
+what-if-name.type = NetworkLayoutNameParameter
+what-if-name.help = Name of what-if analysis (sub)scenario. Leave blank to select all.
 
 [emissions]
 year-end =
 year-end.type = IntegerParameter
 year-end.nullable = True
 year-end.help = Final year for emission timeline projection. Leave blank to use default = 2100.
-year-end.category = Emission Timeline Detailed Settings
-
-buildings =
-buildings.type = BuildingsParameter
-buildings.help = Buildings to include in emission timeline generation.
-buildings.category = Emission Timeline Detailed Settings
-
-include-pv = false
-include-pv.type = BooleanParameter
-include-pv.help = True to include PV emission offset columns (negative values = avoided emissions). False to ignore PV contributions.
-    For each PV panel, adds: PV_{code}_GRID_offset_kgCO2e (on-site use) and PV_{code}_GRID_export_kgCO2e (grid export).
-    Original GRID component columns remain unchanged. Ensure Photovoltaic Panels Feature has been executed.
-include-pv.category = PV Offsetting
-
-pv-codes =
-pv-codes.type = ColumnMultiChoiceParameter
-pv-codes.help = PV panel types to include in emission calculations. Leave empty to include all available PV panels. Only relevant when include-pv is True.
-pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
-pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
-pv-codes.column = code
-pv-codes.category = PV Offsetting
-
 
 grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = InputFileParameter
@@ -559,7 +490,7 @@ grid-decarbonise-reference-year.help = Starting year for grid decarbonisation.
     Example: reference year 2024, target year 2060, target factor 0.0 gives emission factors of 1.0 (2024), 0.5 (2042), 0.0 (2060 onwards).
     Leave blank to disable grid decarbonisation.
 grid-decarbonise-reference-year.nullable = True
-grid-decarbonise-reference-year.category = Grid Decarbonisation
+grid-decarbonise-reference-year.category = Grid Decarbonisation Projection
 
 grid-decarbonise-target-year =
 grid-decarbonise-target-year.type = IntegerParameter
@@ -568,7 +499,7 @@ grid-decarbonise-target-year.help = Year when grid reaches target emission facto
     Emission factor remains constant at target level from this year onwards.
     Leave blank to disable grid decarbonisation.
 grid-decarbonise-target-year.nullable = True
-grid-decarbonise-target-year.category = Grid Decarbonisation
+grid-decarbonise-target-year.category = Grid Decarbonisation Projection
 
 grid-decarbonise-target-emission-factor =
 grid-decarbonise-target-emission-factor.type = RealParameter
@@ -578,8 +509,7 @@ grid-decarbonise-target-emission-factor.help = Target emission factor for grid d
     Negative values are not supported (grid cannot be carbon negative).
     Leave blank to disable grid decarbonisation.
 grid-decarbonise-target-emission-factor.nullable = True
-grid-decarbonise-target-emission-factor.category = Grid Decarbonisation
-
+grid-decarbonise-target-emission-factor.category = Grid Decarbonisation Projection
 
 [extract-reference-case]
 destination = {general:scenario}/../..
