--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -271,9 +271,7 @@ Life Cycle Analysis:
     label: Energy by Carrier
     short_description: Calculate final energy consumption by carrier type
     description: |
-      This feature calculates final energy consumption for each building by energy carrier.
-
-      **Final energy** is the energy delivered to the building meter (electricity, natural gas, district heating/cooling, etc.),
+      This feature calculates final energy consumption for each building by energy carrier.**Final energy** is the energy delivered to the building meter (electricity, natural gas, district heating/cooling, etc.),
       accounting for supply system conversion efficiencies.
 
       **Process**:
@@ -315,7 +313,7 @@ Life Cycle Analysis:
       _Ensure proper citation and compliance with their terms of use._
     interfaces: [cli, dashboard]
     module: cea.analysis.lca.main
-    parameters: ['general:scenario', emissions]
+    parameters: ['general:scenario', what-ifs, emissions]
     input-files:
       - [get_total_demand]
       - [get_building_architecture]
@@ -367,7 +365,7 @@ Life Cycle Analysis:
       Uses the same calculation engine as optimisation for accuracy.
     interfaces: [cli, dashboard]
     module: cea.analysis.costs.main
-    parameters: ['general:scenario', system-costs, system-costs-solar]
+    parameters: ['general:scenario', what-ifs]
     input-files:
       - [get_total_demand]
       - [get_building_supply]
@@ -397,7 +395,7 @@ Life Cycle Analysis:
       plants per network with equal heat distribution.
     interfaces: [cli, dashboard]
     module: cea.analysis.heat.main
-    parameters: ['general:scenario', system-costs]
+    parameters: ['general:scenario', what-ifs]
     input-files:
       - [get_total_demand]
       - [get_building_supply]
