--- a/cea/default.config
+++ b/cea/default.config
@@ -391,21 +391,21 @@ network-name.help = Select an existing network layout to calculate the delivered
 supply-type-cs =
 supply-type-cs.type = DistrictSupplyTypeParameter
 supply-type-cs.supply-category = SUPPLY_COOLING
-supply-type-cs.help = Cooling supply system type(s) for baseline cost calculations. Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity.
+supply-type-cs.help = Cooling supply system type(s). Select 2 assemblies (one building-scale, one district-scale) to handle mismatches between Building Properties/Supply configuration and actual network connectivity. If a building's configured scale differs from network connection status, CEA uses these selections: buildings configured as DISTRICT but not connected use the building assembly; buildings configured as BUILDING but connected use the district assembly.
 supply-type-cs.nullable = true
 supply-type-cs.category = Supply System Configuration
 
 supply-type-hs =
 supply-type-hs.type = DistrictSupplyTypeParameter
 supply-type-hs.supply-category = SUPPLY_HEATING
-supply-type-hs.help = Space heating supply system type(s). Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity.
+supply-type-hs.help = Space heating supply system type(s). Select 2 assemblies (one building-scale, one district-scale) to handle mismatches between Building Properties/Supply configuration and actual network connectivity. If a building's configured scale differs from network connection status, CEA uses these selections: buildings configured as DISTRICT but not connected use the building assembly; buildings configured as BUILDING but connected use the district assembly.
 supply-type-hs.nullable = true
 supply-type-hs.category = Supply System Configuration
 
 supply-type-dhw =
 supply-type-dhw.type = DistrictSupplyTypeParameter
 supply-type-dhw.supply-category = SUPPLY_HOTWATER
-supply-type-dhw.help = Domestic hot water supply system type(s). Select up to 2 assemblies: one building-scale (for standalone buildings) and one district-scale (for district-connected buildings). CEA automatically uses the appropriate scale based on each building's connectivity.
+supply-type-dhw.help = Domestic hot water supply system type(s). Select 2 assemblies (one building-scale, one district-scale) to handle mismatches between Building Properties/Supply configuration and actual network connectivity. If a building's configured scale differs from network connection status, CEA uses these selections: buildings configured as DISTRICT but not connected use the building assembly; buildings configured as BUILDING but connected use the district assembly.
 supply-type-dhw.nullable = true
 supply-type-dhw.category = Supply System Configuration
 
