--- a/cea/default.config
+++ b/cea/default.config
@@ -380,13 +380,13 @@ overwrite-supply-settings.help = False to use supply systems from Building Prope
 what-if-name =
 what-if-name.type = NetworkLayoutNameParameter
 what-if-name.nullable = true
-what-if-name.help = Name of what-if analysis (sub)scenario. Auto set to "baseline" when overwrite-supply-settings is False.
+what-if-name.help = Name of what-if analysis (sub)scenario. Required when overwrite-supply-settings is True (what-if mode).
 
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
 network-name.nullable = true
 network-name.default-to-none = true
-network-name.help = Select an existing network layout to calculate the delivered energy. When overwrite-supply-settings is set to true, network will default to and be validated against baseline. When overwrite-supply-settings is set to false, DH and DC services will be considered if they exist for the selected layout. Select (none) to assess all buildings as standalone systems. Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
+network-name.help = Select an existing network layout for analysis. When overwrite-supply-settings=False (production mode), this parameter specifies which network's district systems to use. When overwrite-supply-settings=True (what-if mode), use this parameter to select which network to analyse. Select (none) to assess all buildings as standalone systems. Networks are created by the 'thermal-network' script.
 
 supply-type-cs =
 supply-type-cs.type = DistrictSupplyTypeParameter
@@ -1690,19 +1690,19 @@ typology.category = Optional
 [decentralized]
 
 [network-layout]
+overwrite-supply-settings = true
+overwrite-supply-settings.type = BooleanParameter
+overwrite-supply-settings.help = True to use 'connected-buildings' parameter instead of buildings defined in Building Properties/Supply. False = production mode
+
 network-name =
 network-name.type = NetworkLayoutNameParameter
 network-name.nullable = false
-network-name.help = Use descriptive names for what-if scenarios (e.g., 'all-connected').
+network-name.help = Name for your network layout. Use descriptive names (e.g., 'all-connected', 'phase-1', 'baseline').
 
 include-services = DC, DH
 include-services.type = MultiChoiceParameter
 include-services.choices = DC, DH
 include-services.help = Type of district thermal service(s) to include for the layout design: DH = district heating, DC = district cooling. Leave blank to include both services.
-
-overwrite-supply-settings = true
-overwrite-supply-settings.type = BooleanParameter
-overwrite-supply-settings.help = True to use 'connected-buildings' parameter instead of buildings defined in Building Properties/Supply.
 
 itemised-dh-services = space_heating, domestic_hot_water
 itemised-dh-services.type = MultiChoiceParameter
