--- a/cea/default.config
+++ b/cea/default.config
@@ -378,7 +378,7 @@ overwrite-supply-settings.type = BooleanParameter
 overwrite-supply-settings.help = False to use supply systems from Building Properties/Supply and validates consistency with network connectivity. True to use what-if (sub)scenario analysis of various network connections.
 
 what-if-name =
-what-if-name.type = NetworkLayoutNameParameter
+what-if-name.type = WhatIfNameParameter
 what-if-name.nullable = true
 what-if-name.help = Name of what-if analysis (sub)scenario. Required when overwrite-supply-settings is True (what-if mode).
 
