--- a/cea/default.config
+++ b/cea/default.config
@@ -380,7 +380,7 @@ overwrite-supply-settings.help = False to use supply systems from Building Prope
 what-if-name =
 what-if-name.type = WhatIfNameParameter
 what-if-name.nullable = true
-what-if-name.help = Name of what-if analysis (sub)scenario. Required when overwrite-supply-settings is True (what-if mode).
+what-if-name.help = Name of what-if analysis (sub)scenario.
 
 network-name =
 network-name.type = NetworkLayoutChoiceParameter
