solar technology added

--- a/cea/default.config
+++ b/cea/default.config
@@ -425,6 +425,7 @@ dhw-booster-type.help = Domestic hot water booster system type. Select one build
 dhw-booster-type.nullable = true
 dhw-booster-type.category = Supply System Configuration
 
+[solar-technology]
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = Buildings to include in solar technology installation.
