simplify supply parameter

--- a/cea/default.config
+++ b/cea/default.config
@@ -388,32 +388,59 @@ network-name.nullable = true
 network-name.default-to-none = true
 network-name.help = Select an existing network layout for analysis. When overwrite-supply-settings=False (production mode), this parameter specifies which network's district systems to use. When overwrite-supply-settings=True (what-if mode), use this parameter to select which network to analyse. Select (none) to assess all buildings as standalone systems. Networks are created by the 'thermal-network' script.
 
-supply-type-cs =
-supply-type-cs.type = DistrictSupplyTypeParameter
-supply-type-cs.supply-category = SUPPLY_COOLING
-supply-type-cs.help = Cooling supply system type(s). Select 2 assemblies (one building-scale, one district-scale) to handle mismatches between Building Properties/Supply configuration and actual network connectivity. If a building's configured scale differs from network connection status, CEA uses these selections: buildings configured as DISTRICT but not connected use the building assembly; buildings configured as BUILDING but connected use the district assembly.
-supply-type-cs.nullable = true
-supply-type-cs.category = Supply System Configuration
+supply-type-cs-building =
+supply-type-cs-building.type = DistrictSupplyTypeParameter
+supply-type-cs-building.supply-category = SUPPLY_COOLING
+supply-type-cs-building.scale = BUILDING
+supply-type-cs-building.help = District-scale assembly for space cooling supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
+supply-type-cs-building.nullable = true
+supply-type-cs-building.category = Supply System Configuration
 
-supply-type-hs =
-supply-type-hs.type = DistrictSupplyTypeParameter
-supply-type-hs.supply-category = SUPPLY_HEATING
-supply-type-hs.help = Space heating supply system type(s). Select 2 assemblies (one building-scale, one district-scale) to handle mismatches between Building Properties/Supply configuration and actual network connectivity. If a building's configured scale differs from network connection status, CEA uses these selections: buildings configured as DISTRICT but not connected use the building assembly; buildings configured as BUILDING but connected use the district assembly.
-supply-type-hs.nullable = true
-supply-type-hs.category = Supply System Configuration
+supply-type-cs-district =
+supply-type-cs-district.type = DistrictSupplyTypeParameter
+supply-type-cs-district.supply-category = SUPPLY_COOLING
+supply-type-cs-district.scale = DISTRICT
+supply-type-cs-district.help = District-scale assembly for space cooling supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
+supply-type-cs-district.nullable = true
+supply-type-cs-district.category = Supply System Configuration
 
-supply-type-dhw =
-supply-type-dhw.type = DistrictSupplyTypeParameter
-supply-type-dhw.supply-category = SUPPLY_HOTWATER
-supply-type-dhw.help = Domestic hot water supply system type(s). Select 2 assemblies (one building-scale, one district-scale) to handle mismatches between Building Properties/Supply configuration and actual network connectivity. If a building's configured scale differs from network connection status, CEA uses these selections: buildings configured as DISTRICT but not connected use the building assembly; buildings configured as BUILDING but connected use the district assembly.
-supply-type-dhw.nullable = true
-supply-type-dhw.category = Supply System Configuration
+supply-type-hs-building =
+supply-type-hs-building.type = DistrictSupplyTypeParameter
+supply-type-hs-building.supply-category = SUPPLY_HEATING
+supply-type-hs-building.scale = BUILDING
+supply-type-hs-building.help = District-scale assembly for space heating supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
+supply-type-hs-building.nullable = true
+supply-type-hs-building.category = Supply System Configuration
+
+supply-type-hs-district =
+supply-type-hs-district.type = DistrictSupplyTypeParameter
+supply-type-hs-district.supply-category = SUPPLY_HEATING
+supply-type-hs-district.scale = DISTRICT
+supply-type-hs-district.help = District-scale assembly for space heating supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
+supply-type-hs-district.nullable = true
+supply-type-hs-district.category = Supply System Configuration
+
+supply-type-dhw-building =
+supply-type-dhw-building.type = DistrictSupplyTypeParameter
+supply-type-dhw-building.supply-category = SUPPLY_HOTWATER
+supply-type-dhw-building.scale = BUILDING
+supply-type-dhw-building.help = District-scale assembly for domestic hot water supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
+supply-type-dhw-building.nullable = true
+supply-type-dhw-building.category = Supply System Configuration
+
+supply-type-dhw-district =
+supply-type-dhw-district.type = DistrictSupplyTypeParameter
+supply-type-dhw-district.supply-category = SUPPLY_HOTWATER
+supply-type-dhw-district.scale = DISTRICT
+supply-type-dhw-district.help = District-scale assembly for domestic hot water supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
+supply-type-dhw-district.nullable = true
+supply-type-dhw-district.category = Supply System Configuration
 
 hs-booster-type =
 hs-booster-type.type = DistrictSupplyTypeParameter
 hs-booster-type.supply-category = SUPPLY_HEATING
 hs-booster-type.scale = BUILDING
-hs-booster-type.help = Space heating booster system type. Select one building-scale assembly for the booster system. Only relevant when a network with a heating system is selected above.
+hs-booster-type.help = Building-scale assembly for the booster space heating supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
 hs-booster-type.nullable = true
 hs-booster-type.category = Supply System Configuration
 
@@ -421,7 +448,7 @@ dhw-booster-type =
 dhw-booster-type.type = DistrictSupplyTypeParameter
 dhw-booster-type.supply-category = SUPPLY_HOTWATER
 dhw-booster-type.scale = BUILDING
-dhw-booster-type.help = Domestic hot water booster system type. Select one building-scale assembly for the booster system. Only relevant when a network with a heating system is selected above.
+dhw-booster-type.help = Building-scale assembly for the booster domestic hot water supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
 dhw-booster-type.nullable = true
 dhw-booster-type.category = Supply System Configuration
 
