solar technology paramter

--- a/cea/default.config
+++ b/cea/default.config
@@ -460,27 +460,32 @@ buildings.category = Solar Technology Configuration
 
 panels-on-roof =
 panels-on-roof.type = SolarPanelChoiceParameter
-panels-on-roof.help = Type(s) of solar panels to consider for rooftop installation cost calculations.
+panels-on-roof.help = Type(s) of solar panels to consider for rooftop installation cost calculations. Leave blank to exclude solar technology on roof.
+panels-on-roof.nullable = true
 panels-on-roof.category = Solar Technology Configuration
 
 panels-on-wall-north =
 panels-on-wall-north.type = SolarPanelChoiceParameter
-panels-on-wall-north.help = Type(s) of solar panels to consider for north-facing facade installation cost calculations.
+panels-on-wall-north.help = Type(s) of solar panels to consider for north-facing facade installation cost calculations. Leave blank to exclude solar technology on this facade.
+panels-on-wall-north.nullable = true
 panels-on-wall-north.category = Solar Technology Configuration
 
 panels-on-wall-south =
 panels-on-wall-south.type = SolarPanelChoiceParameter
-panels-on-wall-south.help = Type(s) of solar panels to consider for south-facing facade installation cost calculations.
+panels-on-wall-south.help = Type(s) of solar panels to consider for south-facing facade installation cost calculations. Leave blank to exclude solar technology on this facade.
+panels-on-wall-south.nullable = true
 panels-on-wall-south.category = Solar Technology Configuration
 
 panels-on-wall-east =
 panels-on-wall-east.type = SolarPanelChoiceParameter
-panels-on-wall-east.help = Type(s) of solar panels to consider for east-facing facade installation cost calculations.
+panels-on-wall-east.help = Type(s) of solar panels to consider for east-facing facade installation cost calculations. Leave blank to exclude solar technology on this facade.
+panels-on-wall-east.nullable = true
 panels-on-wall-east.category = Solar Technology Configuration
 
 panels-on-wall-west =
 panels-on-wall-west.type = SolarPanelChoiceParameter
-panels-on-wall-west.help = Type(s) of solar panels to consider for west-facing facade installation cost calculations.
+panels-on-wall-west.help = Type(s) of solar panels to consider for west-facing facade installation cost calculations. Leave blank to exclude solar technology on this facade.
+panels-on-wall-west.nullable = true
 panels-on-wall-west.category = Solar Technology Configuration
 
 [what-ifs]
