--- a/cea/default.config
+++ b/cea/default.config
@@ -436,21 +436,21 @@ supply-type-dhw-district.help = District-scale assembly for domestic hot water s
 supply-type-dhw-district.nullable = true
 supply-type-dhw-district.category = Supply System Configuration
 
-hs-booster-type =
-hs-booster-type.type = DistrictSupplyTypeParameter
-hs-booster-type.supply-category = SUPPLY_HEATING
-hs-booster-type.scale = BUILDING
-hs-booster-type.help = Building-scale assembly for the booster space heating supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
-hs-booster-type.nullable = true
-hs-booster-type.category = Supply System Configuration
+hs-booster-type-building =
+hs-booster-type-building-building.type = DistrictSupplyTypeParameter
+hs-booster-type-building.supply-category = SUPPLY_HEATING
+hs-booster-type-building.scale = BUILDING
+hs-booster-type-building.help = Building-scale assembly for the booster space heating supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
+hs-booster-type-building.nullable = true
+hs-booster-type-building.category = Supply System Configuration
 
-dhw-booster-type =
-dhw-booster-type.type = DistrictSupplyTypeParameter
-dhw-booster-type.supply-category = SUPPLY_HOTWATER
-dhw-booster-type.scale = BUILDING
-dhw-booster-type.help = Building-scale assembly for the booster domestic hot water supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
-dhw-booster-type.nullable = true
-dhw-booster-type.category = Supply System Configuration
+dhw-booster-type-building =
+dhw-booster-type-building.type = DistrictSupplyTypeParameter
+dhw-booster-type-building.supply-category = SUPPLY_HOTWATER
+dhw-booster-type-building.scale = BUILDING
+dhw-booster-type-building.help = Building-scale assembly for the booster domestic hot water supply. Leave blank to let CEA select one based on the existing Building Properties/Supply configuration.
+dhw-booster-type-building.nullable = true
+dhw-booster-type-building.category = Supply System Configuration
 
 [solar-technology]
 buildings =
